add u.data & u.item schema

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 						    return movieNames
 						  }
 						</code></pre>
+						<small>../ml-100k/u.item: MovieId | MovieName | Date | Link</small>
 					</section>
 
 					<section>
@@ -147,6 +148,7 @@
 						    results.foreach(println)
 						  }
 						</code></pre>
+						<small>../ml-100k/u.data: UserId, MovieId, Rating, Time.</small>
 					</section>	
 					
 				</section>
