--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
 				</section>
 
 				<section>
+					<h2>DEMO TIME!</h2>
+					<p>Let's run it in action.</p>
+				</section>
+
+				<section>
 					<h2>Thanks</h2>
 				</section>
 
